# gaius

./: README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: agent.rs  agents.rs  cli_prompt.rs  commands.rs  config.rs  diff_view.rs  dirs.rs  harness.rs  harness_actor.rs  input.rs  lib.rs  main.rs  models.rs  plan_hook.rs  render.rs  render_history.rs  render_input.rs  render_lists.rs  session.rs  token_usage.rs  tools.rs  tui.rs  util.rs
cli/tests/: agents_tests.rs  commands_tests.rs  config_tests.rs  harness_tests.rs  input_tests.rs  models_tests.rs  render_tests.rs  tools_tests.rs  tui_tests.rs
