[package]
name = "gaius"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
futures = "0.3"
genai = "0.5.3"
glob = "0.3"
pico-args = "0.5.0"
ratatui = "0.30.0"
regex = "1"
reqwest = { version = "0.13.3", features = ["json"] }
rmp-serde = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tui-markdown = "0.3.7"
url = "2.5.8"
uuid = { version = "1", features = ["v7"] }
walkdir = "2"
